--- a/requirements.txt
+++ b/requirements.txt
@@ -1,150 +1,146 @@
 
-argon==0.2.0
-argon2-cffi==20.1.0
-astroid==2.8.0
-attrs==21.2.0
-backcall==0.2.0
-backports.entry-points-selectable==1.1.0
-beautifulsoup4==4.8.2
-blinker==1.4
+# argon==0.2.0
+# argon2-cffi==20.1.0
+# astroid==2.8.0
+# attrs==21.2.0
+# backcall==0.2.0
+# backports.entry-points-selectable==1.1.0
+# beautifulsoup4==4.8.2
+# blinker==1.4
 
-certifi==2019.11.28
-cffi==1.14.6
-chardet==3.0.4
-cliapp==1.20180812.1
-click==8.0.1
-cmdtest==0.32+git
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-cryptography==2.8
-cssselect==1.1.0
-cupshelpers==1.0
-dbus-python==1.2.16
-debugpy==1.4.3
-decorator==5.1.0
-defer==1.0.6
-distlib==0.3.2
-distro==1.4.0
-entrypoints==0.3
-feedfinder2==0.0.4
-feedparser==6.0.8
-filelock==3.0.12
-Flask==2.0.1
-Flask-Login==0.5.0
-flask-restplus==0.13.0
-flask-restx==0.5.1
-Flask-SeaSurf==0.3.1
-grpcio==1.16.1
-gunicorn==20.0.4
-httplib2==0.14.0
-idna==2.8
-ifaddr==0.1.6
-IMDbPY==6.8
-ipykernel==6.4.1
-ipython==7.28.0
-ipython-genutils==0.2.0
-isort==5.9.3
-itsdangerous==2.0.1
-jedi==0.18.0
-jieba3k==0.35.1
-Jinja2==3.0.1
-joblib==1.0.1
-jsonschema==3.2.0
-jupyter-client==7.0.3
-jupyter-core==4.8.1
-keyring==18.0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.6.0
-libvirt-python==6.1.0
-louis==3.12.0
-lxml==4.6.3
-macaroonbakery==1.3.1
-Mako==1.1.0
-Markdown==3.1.1
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-nemo-emblems==5.0.0
-nest-asyncio==1.5.1
-netaddr==0.7.19
-netifaces==0.10.4
-newspaper3k==0.2.8
-nltk==3.6.3
-numpy==1.21.2
-oauthlib==3.1.0
-onboard==1.4.1
-packaging==20.3
-PAM==0.4.2
-pandas==1.3.3
-parso==0.8.2
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==7.0.0
-platformdirs==2.2.0
-prompt-toolkit==3.0.20
-protobuf==3.6.1
-psutil==5.5.1
-pycairo==1.16.2
-pycparser==2.20
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0.2
-Pygments==2.3.1
-PyGObject==3.36.0
-PyICU==2.4.2
-pyinotify==0.9.6
-PyJWT==1.7.1
-pylint==2.11.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyparsing==2.4.6
-pyparted==3.11.2
-pyRFC3339==1.1
-pyrsistent==0.18.0
-python-apt==2.0.0+ubuntu0.20.4.5
-python-dateutil==2.8.2
-python-debian===0.1.36ubuntu1
-python-magic==0.4.16
-python-xapp==2.2.1
-python-xlib==0.23
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-pyzmq==22.3.0
-regex==2021.9.24
-reportlab==3.5.34
-requests==2.22.0
-requests-file==1.4.3
-requests-unixsocket==0.2.0
-screen-resolution-extra==0.0.0
-SecretStorage==2.3.1
-setproctitle==1.1.10
-sgmllib3k==1.0.0
-simplejson==3.16.0
-six==1.14.0
-soupsieve==1.9.5
-systemd-python==234
-tinycss2==1.0.2
-tinysegmenter==0.3
-tldextract==2.2.1
-toml==0.10.2
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.0
-ttystatus==0.38
-typing-extensions==3.10.0.2
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-Unidecode==1.1.1
-urllib3==1.25.8
-virtualenv==20.7.2
-wadllib==1.3.3
-wcwidth==0.2.5
-webencodings==0.5.1
+# certifi==2019.11.28
+# cffi==1.14.6
+# chardet==3.0.4
+
+# configobj==5.0.6
+# cryptography==2.8
+# cssselect==1.1.0
+# cupshelpers==1.0
+# dbus-python==1.2.16
+# debugpy==1.4.3
+# decorator==5.1.0
+# defer==1.0.6
+# distlib==0.3.2
+# distro==1.4.0
+# entrypoints==0.3
+# feedfinder2==0.0.4
+# feedparser==6.0.8
+# filelock==3.0.12
+ Flask==2.0.1
+# Flask-Login==0.5.0
+# flask-restplus==0.13.0
+ flask-restx==0.5.1
+# Flask-SeaSurf==0.3.1
+# grpcio==1.16.1
+# gunicorn==20.0.4
+# httplib2==0.14.0
+# idna==2.8
+# ifaddr==0.1.6
+# IMDbPY==6.8
+# ipykernel==6.4.1
+# ipython==7.28.0
+# ipython-genutils==0.2.0
+# isort==5.9.3
+# itsdangerous==2.0.1
+# jedi==0.18.0
+# jieba3k==0.35.1
+# Jinja2==3.0.1
+# joblib==1.0.1
+# jsonschema==3.2.0
+# jupyter-client==7.0.3
+# jupyter-core==4.8.1
+# keyring==18.0.1
+# launchpadlib==1.10.13
+# lazr.restfulclient==0.14.2
+# lazr.uri==1.0.3
+# lazy-object-proxy==1.6.0
+# libvirt-python==6.1.0
+# louis==3.12.0
+# lxml==4.6.3
+# macaroonbakery==1.3.1
+# Mako==1.1.0
+# Markdown==3.1.1
+# MarkupSafe==2.0.1
+# matplotlib-inline==0.1.3
+# mccabe==0.6.1
+# nemo-emblems==5.0.0
+# nest-asyncio==1.5.1
+# netaddr==0.7.19
+# netifaces==0.10.4
+# newspaper3k==0.2.8
+# nltk==3.6.3
+ numpy==1.21.2
+# oauthlib==3.1.0
+# onboard==1.4.1
+# packaging==20.3
+# PAM==0.4.2
+ pandas==1.3.3
+# parso==0.8.2
+# pexpect==4.6.0
+# pickleshare==0.7.5
+# Pillow==7.0.0
+# platformdirs==2.2.0
+# prompt-toolkit==3.0.20
+# protobuf==3.6.1
+# psutil==5.5.1
+# pycairo==1.16.2
+# pycparser==2.20
+# pycrypto==2.6.1
+# pycups==1.9.73
+# pycurl==7.43.0.2
+# Pygments==2.3.1
+# PyGObject==3.36.0
+# PyICU==2.4.2
+# pyinotify==0.9.6
+# PyJWT==1.7.1
+# pylint==2.11.1
+# pymacaroons==0.13.0
+# PyNaCl==1.3.0
+# pyparsing==2.4.6
+# pyparted==3.11.2
+# pyRFC3339==1.1
+# pyrsistent==0.18.0
+# python-apt==2.0.0+ubuntu0.20.4.5
+# python-dateutil==2.8.2
+# python-debian===0.1.36ubuntu1
+# python-magic==0.4.16
+# python-xapp==2.2.1
+# python-xlib==0.23
+# pytz==2019.3
+# pyxdg==0.26
+# PyYAML==5.3.1
+# pyzmq==22.3.0
+# regex==2021.9.24
+# reportlab==3.5.34
+ requests==2.22.0
+# requests-file==1.4.3
+# requests-unixsocket==0.2.0
+# screen-resolution-extra==0.0.0
+# SecretStorage==2.3.1
+# setproctitle==1.1.10
+# sgmllib3k==1.0.0
+# simplejson==3.16.0
+# six==1.14.0
+ soupsieve==1.9.5
+# systemd-python==234
+# tinycss2==1.0.2
+# tinysegmenter==0.3
+# tldextract==2.2.1
+# toml==0.10.2
+# tornado==6.1
+# tqdm==4.62.3
+# traitlets==5.1.0
+# ttystatus==0.38
+# typing-extensions==3.10.0.2
+# ubuntu-drivers-common==0.0.0
+# ufw==0.36
+# Unidecode==1.1.1
+# urllib3==1.25.8
+# virtualenv==20.7.2
+# wadllib==1.3.3
+# wcwidth==0.2.5
+# webencodings==0.5.1
 Werkzeug==2.0.1
-wrapt==1.12.1
-xkit==0.0.0
-youtube-dl==2021.4.26
+# wrapt==1.12.1
+# xkit==0.0.0
+# youtube-dl==2021.4.26
