--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
-
+# aniso8601==9.0.1
+# apt-clone==0.2.1
+# apturl==0.5.2
 # argon==0.2.0
 # argon2-cffi==20.1.0
 # astroid==2.8.0
 # attrs==21.2.0
 # backcall==0.2.0
 # backports.entry-points-selectable==1.1.0
-# beautifulsoup4==4.8.2
+ beautifulsoup4==4.8.2
 # blinker==1.4
-
+# Brlapi==0.7.0
 # certifi==2019.11.28
 # cffi==1.14.6
 # chardet==3.0.4
-
+# cliapp==1.20180812.1
+# click==8.0.1
+# cmdtest==0.32+git
+# colorama==0.4.3
+# command-not-found==0.3
 # configobj==5.0.6
 # cryptography==2.8
 # cssselect==1.1.0
@@ -32,7 +38,7 @@
  flask-restx==0.5.1
 # Flask-SeaSurf==0.3.1
 # grpcio==1.16.1
-# gunicorn==20.0.4
+ gunicorn==20.0.4
 # httplib2==0.14.0
 # idna==2.8
 # ifaddr==0.1.6
@@ -56,7 +62,7 @@
 # lazy-object-proxy==1.6.0
 # libvirt-python==6.1.0
 # louis==3.12.0
-# lxml==4.6.3
+ lxml==4.6.3
 # macaroonbakery==1.3.1
 # Mako==1.1.0
 # Markdown==3.1.1
@@ -121,7 +127,7 @@
 # sgmllib3k==1.0.0
 # simplejson==3.16.0
 # six==1.14.0
- soupsieve==1.9.5
+# soupsieve==1.9.5
 # systemd-python==234
 # tinycss2==1.0.2
 # tinysegmenter==0.3
@@ -136,11 +142,11 @@
 # ufw==0.36
 # Unidecode==1.1.1
 # urllib3==1.25.8
-# virtualenv==20.7.2
+ virtualenv==20.7.2
 # wadllib==1.3.3
 # wcwidth==0.2.5
 # webencodings==0.5.1
-Werkzeug==2.0.1
+# Werkzeug==2.0.1
 # wrapt==1.12.1
 # xkit==0.0.0
 # youtube-dl==2021.4.26
