--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ farmers-assistant-backend/.
 torch-1.4.0+cpu-cp38-cp38-linux_x86_64.whl
 torchvision-0.8.1+cpu-cp38-cp38-linux_x86_64.whl
 __pycache__/.
+utils/__pycache__/.
