--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ torch-1.4.0+cpu-cp38-cp38-linux_x86_64.whl
 torchvision-0.8.1+cpu-cp38-cp38-linux_x86_64.whl
 __pycache__/*
 utils/__pycache__/*
+node_modules
+node_modules
