--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,4 @@ http://download.pytorch.org/whl/cpu/torch-1.7.1%2Bcpu-cp39-cp39-linux_x86_64.whl
 http://download.pytorch.org/whl/cpu/torchvision-0.10.0%2Bcpu-cp39-cp39-linux_x86_64.whl
 scikit-learn
 Pillow
+tinydb == 4.5.2
